# WikiEtymoBot

./: .gitignore  LICENSE  README.md  pyproject.toml
resources/: keywords.yaml  prompt_templates.yaml  response_validation_config.yaml
src/: cli.py
src/wiki_etymo_bot/: app.py  article_retriever.py  concurrency.py  context_formatter.py  core.py  link_selector.py  output_models.py  page_parser.py  resources.py  response_validator.py  settings.py  typing.py  wiktionary_client.py
